--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "pinia": "^2.1.7",
     "vite": "^5.0.9",
     "vue": "^3.3.10",
+    "vue-i18n": "^9.13.1",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
