--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/w3c-web-hid": "^1.0.6",
     "color-convert": "^2.0.1",
     "element-plus": "^2.4.3",
+    "file-saver": "^2.0.5",
     "pinia": "^2.1.7",
     "vite": "^5.0.9",
     "vue": "^3.3.10",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^18.19.2",
     "@vitejs/plugin-vue": "^4.5.1",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
