--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "pinia": "^2.1.7",
     "vite": "^5.0.9",
     "vue": "^3.3.10",
+    "vue-cropper": "^1.1.4",
     "vue-i18n": "^9.13.1",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vue3-draggable-resizable": "^1.6.5"
   },
   "devDependencies": {
     "@tsconfig/node18": "^18.2.2",
