--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/w3c-web-hid": "^1.0.6",
     "axios": "^1.7.2",
     "color-convert": "^2.0.1",
+    "echarts": "^5.6.0",
     "element-plus": "^2.4.3",
     "file-saver": "^2.0.5",
     "pinia": "^2.1.7",
