--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/keyboard/*", "node_modules/*/*/*.d.ts"],
+  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/keyboard/*", "node_modules/*/*/*.d.ts", "src/**/*.json"],
   "exclude": ["src/**/__tests__/*"],
   "compilerOptions": {
     "composite": true,
